--- a/src/finmag/sim/tests/dynamics_3D/Makefile
+++ b/src/finmag/sim/tests/dynamics_3D/Makefile
@@ -1,27 +1,22 @@
-meshgen-nmag:
-	netgen -geofile=bar.geo -meshfiletype="Neutral Format" -meshfile=bar.neutral -batchmode
+all: run-nmag run-dolfin
 
-meshgen-dolfin:
-	netgen -geofile=bar.geo -meshfiletype="Gmsh2 Format" -meshfile=bar.gmsh -batchmode
-
-meshconvert-nmag:
+mesh-nmag:
+	- netgen -geofile=bar.geo -meshfiletype="Neutral Format" -meshfile=bar.neutral -batchmode
 	nmeshimport --netgen bar.neutral bar.nmesh.h5
 	gzip -f bar.neutral
 
-meshconvert-dolfin:
+run-nmag: mesh-nmag
+	nsim run_nmag.py --clean
+	ncol bar time M_Py_0 M_Py_1 M_Py_2 > data_M.txt
+
+mesh-dolfin:
+	- netgen -geofile=bar.geo -meshfiletype="Gmsh2 Format" -meshfile=bar.gmsh -batchmode
 	dolfin-convert bar.gmsh bar.xml
+
+run-dolfin: mesh-dolfin
+	python run_dolfin.py
 
 meshshow:
 	nmeshpp --vtk bar.nmesh.h5 bar.vtk
 	mayavi2 -d bar.vtk -m Surface
-
-run:
-	nsim run_nmag.py --clean
-
-extract_M:
-	ncol bar time M_Py_0 M_Py_1 M_Py_2 > data_M.txt
-
-extract_H_ex:
-	ncol bar time H_exch_Py_0 H_exch_Py_1 H_exch_Py_2 > data_H_ex.txt
-
 
