minor adjustments to documentation.

--- a/devtests/demag/docu/Makefile
+++ b/devtests/demag/docu/Makefile
@@ -1,7 +1,5 @@
-all: truncdemag1.pdf truncdemag2.pdf
+demagnetisationfield.pdf: demagnetisationfield.tex
+	pdflatex demagnetisationfield.tex
 
-truncdemag1.pdf: truncdemag1.tex
-	pdflatex truncdemag1.tex
-
-truncdemag2.pdf: truncdemag2.tex
-	pdflatex truncdemag2.tex
+force:
+	pdflatex demagnetisationfield.tex	
