prefer non-italic for descriptive labels (such as 'demag') and operator names (such as 'supp')

--- a/devtests/demag/docu/Makefile
+++ b/devtests/demag/docu/Makefile
@@ -1,4 +1,4 @@
-demagnetisationfield.pdf: demagnetisationfield.tex
+demagnetisationfield.pdf: demagnetisationfield.tex magstyle.sty
 	pdflatex demagnetisationfield.tex
 
 force:
