Fixed PYTHONPATH for the Sphinx makefile

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -39,7 +39,7 @@ help:
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
 clean:
-	-rm -rf $(BUILDDIR)/*
+	-rm -rf $(BUILDDIR)/* modules/*
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
@@ -153,5 +153,5 @@ doctest:
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 #next target added to get Jenkins to run generate_doc.py before building the documentation.
-python-generate_doc:	
-	python generate_doc.py
+generate-doc:	
+	PYTHONPATH=../src python generate_doc.py
