--- a/doc/Makefile
+++ b/doc/Makefile
@@ -44,7 +44,7 @@ clean:
 	-rm -rf $(BUILDDIR)/* modules/*
 
 html: generate-doc
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) -W -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
