--- a/native/Makefile
+++ b/native/Makefile
@@ -28,10 +28,12 @@ UNIT_TEST_BINARY=tests/run_ci_tests.bin
 # Directory for CI unit test results
 UNIT_TEST_RESULTS_DIR=../test-reports/boost
 # Explicit dependencies to tell how the module files are linked
-$(MODULE_DIR)/sundials.so : src/sundials/py_sundials_module.o src/util/np_array.o src/sundials/sundials_cvode.o
-sundials_LDFLAGS = -lsundials_cvode -llapack
+SUNDIALS_NVECTOR_SO=$(abspath src/sundials/nvec_serial/nvector_serial_custom_malloc.so)
+
+$(MODULE_DIR)/sundials.so : src/sundials/py_sundials_module.o src/util/np_array.o src/sundials/sundials_cvode.o src/sundials/numpy_malloc.o
+sundials_LDFLAGS = -lsundials_cvode -llapack $(SUNDIALS_NVECTOR_SO)
 $(UNIT_TEST_BINARY) : tests/run_ci_tests.o src/util/np_array.o src/sundials/tests/sundials_tests.o src/sundials/numpy_malloc.o
-run_ci_tests_LDFLAGS=-lboost_prg_exec_monitor /usr/lib/libboost_unit_test_framework.a src/sundials/nvec_serial/nvector_serial_custom_malloc.so
+run_ci_tests_LDFLAGS=-lboost_prg_exec_monitor /usr/lib/libboost_unit_test_framework.a $(SUNDIALS_NVECTOR_SO)
 
 #######################################
 # Other variables
