add nmag spinwaves script

--- a/src/finmag/sim/tests/periodic_spinwaves/Makefile
+++ b/src/finmag/sim/tests/periodic_spinwaves/Makefile
@@ -1,12 +1,12 @@
-mesh: meshgen meshconvert meshmirror
+mesh: mesh
 
-meshgen:
+mesh:
 	- netgen -geofile=film.geo -meshfiletype="Neutral Format" -meshfile=film.neutral -batchmode
-
-meshconvert:
 	nmeshimport --netgen film.neutral film.nmesh
 	rm film.neutral
 
-meshmirror:
-	nmeshmirror film.nmesh 1e-6 1e-6 -1,0,0 periodic.nmesh
-	rm film.nmesh
+nmag:
+	nsim run_nmag.py --clean
+
+extract:
+	nmagpp --vtk=fields spinwaves
