--- a/native/src/sundials/nvec_serial/Makefile
+++ b/native/src/sundials/nvec_serial/Makefile
@@ -11,7 +11,7 @@
 #
 # Adjustable options are below.
 #
-CFLAGS=-O3 -fPIC -mfpmath=sse -march=native -ffast-math -lblas -llapack -lm
+CFLAGS=-O3 -fPIC -mfpmath=sse -march=native -ffast-math -lblas -llapack -lm -g -rdynamic
 DEPS = Makefile nvector_custom_malloc_impl.h ../nvector_custom_malloc.h
 SOURCES = nvector_serial_custom_malloc.c sundials_math.c
 
