Add running of relevant test to get image files ready for documentation.
Not sure this is ideal: in the current setup we need to maintain the list of
required files in this Makefile, but will not run code unneccesarily, and
'make html', for example, will 'just work'.

Alternatively, we could always run py.test on ../examples, but this will
take longer, and maybe forgotten. Let's see how it goes.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -39,7 +39,7 @@ help:
 	@echo "  changes    to make an overview of all changed/added/deprecated items"
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
-	
+
 clean:
 	-rm -rf $(BUILDDIR)/* modules/*
 
@@ -155,5 +155,15 @@ doctest:
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 #next target added to get Jenkins to run generate_doc.py before building the documentation.
-generate-doc:	
+generate-doc: examples-for-doc
 	python generate_doc.py
+
+#this target can be run to execute py.test ../examples to get figure
+#files ready. This will happen automatically when Jenkins runs, as
+#all tests in finmag/src and finmag/examples are run before the 
+
+examples-for-doc: ../examples/macrospin/alpha-1.00.png
+
+../examples/macrospin/alpha-1.00.png: ../examples/macrospin/test_macrospin.py
+	python ../examples/macrospin/test_macrospin.py
+
