Changed /etc/matplotlibrc on summer (where jenkins runs) so that the default matplotlib backend is Agg. This should work without X, and thus we don't have to set the pylab/matplotlib backend for every example individually.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -172,7 +172,7 @@ DOC_DIR = $(abspath .)
 # Paths that have to be added to PYTHONPATH prior to running the tests from here (for jenkins)
 PYTHON_ROOTS = $(DOC_DIR)/../src
 ../examples/macrospin/alpha-1.00.png: ../examples/macrospin/test_macrospin.py
-	python PYTHONPATH=$(PYTHON_ROOTS) python ../examples/macrospin/test_macrospin.py
+	cd ../examples/macrospin/ && PYTHONPATH=$(PYTHON_ROOTS) python test_macrospin.py
 
-../examples/time-dependent-applied-field/fittedresults.txt: ../examples/time-dependent-applied-field/test_appfield.py
+../examples/time-dependent-applied-field/fittedresults.txt ../examples/time-dependent-applied-field/fit.png ../examples/time-dependent-applied-field/results.png: ../examples/time-dependent-applied-field/test_appfield.py
 	cd ../examples/time-dependent-applied-field && PYTHONPATH=$(PYTHON_ROOTS) python test_appfield.py
