use scale_factor in nmag2/exchange_demag.py

--- a/devtests/demag/nmag2/Makefile
+++ b/devtests/demag/nmag2/Makefile
@@ -13,3 +13,8 @@ meshshow:
 	nmeshpp --vtk bar.nmesh.h5 bar.vtk
 	mayavi2 -d bar.vtk -m Surface
 
+finmag:
+	python exchange_demag.py
+
+show:
+	gnuplot gnu.plot
