Modifiation to example Makefile to allow execution by Jenkins.

--- a/examples/exchange_demag/timings/Makefile
+++ b/examples/exchange_demag/timings/Makefile
@@ -1,3 +1,6 @@
+#Need PYTHONPATH when calling Python inside Makefile on Jenkins
+PYTHON_ROOTS = ../../../src 
+
 all: xmlmesh h5mesh nmag finmag cleanup
 
 xmlmesh:
@@ -14,7 +17,7 @@ nmag:
 	nsim run_nmag.py --clean
 
 finmag:
-	python run_finmag.py
+	PYTHONPATH=$(PYTHON_ROOTS) python run_finmag.py
 
 cleanup:
 	rm bar_bi.xml bar.grid bar_mat.xml bar.neutral bar.xml.bak run_nmag_log.log bar_dat.ndt
