[#28350193] Started to write a test that compares the energy with nmag for the nmag2 example. It is completely off, but it's also way off for the exchange energy.

--- a/examples/exchange_demag/Makefile
+++ b/examples/exchange_demag/Makefile
@@ -8,6 +8,7 @@ mesh:
 nmag: mesh
 	nsim run_nmag.py --clean
 	ncol bar time m_Py_0 m_Py_1 m_Py_2 > averages_ref.txt
+	ncol bar E_exch_Py E_demag_Py > energies_ref.txt
 
 meshshow:
 	nmeshpp --vtk bar.nmesh.h5 bar.vtk
