--- a/doc/Makefile
+++ b/doc/Makefile
@@ -165,7 +165,7 @@ generate-doc: examples-for-doc
 
 #list of files we need for documentation and which should trigger running of
 #the right files in ../examples to create them.
-examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alpha-0-50.png ../examples/macrospin/alpha-0-10.png ../examples/macrospin/alpha-0-02.png ../examples/time-dependent-applied-field/fittedresults.txt ../examples/time-dependent-applied-field/fit.png ../examples/time-dependent-applied-field/results.png ../examples/exchange_demag/exchange_demag.png ../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/errnorm.png ../examples/exchange_demag/timings/results.rst
+examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alpha-0-50.png ../examples/macrospin/alpha-0-10.png ../examples/macrospin/alpha-0-02.png ../examples/time-dependent-applied-field/fittedresults.txt ../examples/time-dependent-applied-field/fit.png ../examples/time-dependent-applied-field/results.png ../examples/exchange_demag/exchange_demag.png ../examples/exchange_demag/exchange_energy.png ../examples/exchange_demag/demag_energy.png ../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/errnorm.png ../examples/exchange_demag/timings/results.rst
 
 # The absolute path for the doc directory
 DOC_DIR = $(abspath .)
@@ -188,7 +188,7 @@ PYTHON_ROOTS = $(DOC_DIR)/../src
 ../examples/time-dependent-applied-field/fittedresults.txt ../examples/time-dependent-applied-field/fit.png ../examples/time-dependent-applied-field/results.png: ../examples/time-dependent-applied-field/test_appfield.py
 	cd ../examples/time-dependent-applied-field && PYTHONPATH=$(PYTHON_ROOTS) python test_appfield.py
 
-../examples/exchange_demag/exchange_demag.png: ../examples/exchange_demag/test_exchange_demag.py
+../examples/exchange_demag/exchange_demag.png ../examples/exchange_demag/exchange_energy.png ../examples/exchange_demag/demag_energy.png: ../examples/exchange_demag/test_exchange_demag.py
 	cd ../examples/exchange_demag/ && PYTHONPATH=$(PYTHON_ROOTS) python test_exchange_demag.py
 
 ../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/errnorm.png: ../examples/demag/short_nmag_comp_tests2.py
