reorganise anisotropy tests
... and discover a surprising amount of bugs

nmag bug with the max norm in the rel_diff calculation
oommf forgot square root in rel_diff, wrong mesh size and
    coordinates in wrong units

--- a/src/finmag/tests/comparison/anisotropy/Makefile
+++ b/src/finmag/tests/comparison/anisotropy/Makefile
@@ -1,17 +1,17 @@
 all: nmag
 
-bar_5_5_5.nmesh.h5:
-	- netgen -geofile=bar_5_5_5.geo -meshfiletype="Neutral Format" -meshfile=bar_5_5_5.neutral -batchmode
-	nmeshimport --netgen bar_5_5_5.neutral bar_5_5_5.nmesh.h5
-	rm bar_5_5_5.neutral
+bar.nmesh.h5:
+	- netgen -geofile=bar.geo -meshfiletype="Neutral Format" -meshfile=bar.neutral -batchmode
+	nmeshimport --netgen bar.neutral bar.nmesh.h5
+	rm bar.neutral
 
 clean:
-	rm bar_5_5_5.nmesh.h5
+	rm bar.nmesh.h5
 
-nmag: bar_5_5_5.nmesh.h5
+nmag: bar.nmesh.h5
 	nsim run_nmag.py --clean
 
 meshshow: mesh
-	nmeshpp --vtk bar_5_5_5.nmesh.h5 bar_5_5_5.vtk
-	mayavi2 -d bar_5_5_5.vtk -m Surface
+	nmeshpp --vtk bar.nmesh.h5 bar.vtk
+	mayavi2 -d bar.vtk -m Surface
 
