Added example to documentation. Tries to create file from viper plot. May fail on Jenkins as no X is available.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -183,7 +183,9 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 	../examples/demag/errnorm_loglog.png ../examples/demag/results_field.txt \
 	../src/finmag/tests/comparison/exchange/table.rst ../src/finmag/tests/comparison/anisotropy/table.rst \
 	../src/finmag/tests/comparison/demag/table.rst ../examples/exchange_demag/simple1D.png \
-	../examples/exchange_demag/finmag_exch_density.npy ../examples/exchange_demag/finmag_demag_density.npy
+	../examples/exchange_demag/finmag_exch_density.npy ../examples/exchange_demag/finmag_demag_density.npy \
+	../examples/spatially-varying-anisotropy/exchangespring.png \
+	../examples/spatially-varying-anisotropy/profile.png
 
 
 ../examples/macrospin/alpha-1-00.png: ../examples/macrospin/test_macrospin.py
@@ -227,3 +229,7 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 
 ../examples/exchange_demag/finmag_exch_density.npy ../examples/exchange_demag/finmag_demag_density.npy:
 	cd ../examples/exchange_demag/ && make nmag
+
+../examples/spatially-varying-anisotropy/exchangespring.png ../examples/spatially-varying-anisotropy/profile.png:
+	cd ../examples/spatially-varying-anisotropy && python run.py
+
