Not sure about this..
make html fails because it depends on /tests/comparison/anisotropy/test_anisotropy_field.py which doesn't exist.

I guess it has existed at one point, otherwise the build would have failed everywhere else. I assume the file has been renamed to conftest.py in the same folder? This conftest.py doesn't create the table.rst needed for documentation by itself, but it's created by unittest. We should either make the file produce the table itself or remove it from the Makefile in /doc. Marc-Antonio?

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -218,7 +218,7 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 	cd ../src/finmag/tests/comparison/exchange/ && PYTHONPATH=$(PYTHON_ROOTS) python test_exchange_field.py
 
 ../src/finmag/tests/comparison/anisotropy/table.rst:
-	cd ../src/finmag/tests/comparison/anisotropy/ && PYTHONPATH=$(PYTHON_ROOTS) python test_anisotropy_field.py
+	cd ../src/finmag/tests/comparison/anisotropy/ && PYTHONPATH=$(PYTHON_ROOTS) python conftest.py
 
 ../src/finmag/tests/comparison/demag/table.rst:
 	cd ../src/finmag/tests/comparison/demag/ && PYTHONPATH=$(PYTHON_ROOTS) python test_demag_field.py
