--- a/doc/Makefile
+++ b/doc/Makefile
@@ -155,13 +155,17 @@ doctest:
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 #next target added to get Jenkins to run generate_doc.py before building the documentation.
-generate-doc: examples-for-doc
+generate-doc: examples-for-doc timing
 	python generate_doc.py
 
 # The absolute path for the doc directory
 DOC_DIR = $(abspath .)
 # Paths that have to be added to PYTHONPATH prior to running the tests from here (for jenkins)
 PYTHON_ROOTS = $(DOC_DIR)/../src
+
+# Benchmark nmag example #2.
+timing:
+	cd ../examples/exchange_demag/timings/ && PYTHONPATH=$(PYTHON_ROOTS) python run_finmag.py
 
 #this target can be run to execute py.test ../examples to get figure
 #files ready. This will happen automatically when Jenkins runs, as
@@ -180,9 +184,7 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 	../src/finmag/tests/comparison/exchange/table.rst ../src/finmag/tests/comparison/anisotropy/table.rst \
 	../src/finmag/tests/comparison/demag/table.rst ../examples/exchange_demag/simple1D.png \
 	../examples/exchange_demag/finmag_exch_density.npy ../examples/exchange_demag/finmag_demag_density.npy \
-	../examples/spatially-varying-anisotropy/profile.png \
-	../examples/exchange_demag/timings/results.rst
-
+	../examples/spatially-varying-anisotropy/profile.png
 
 ../examples/macrospin/alpha-1-00.png: ../examples/macrospin/test_macrospin.py
 	cd ../examples/macrospin/ && PYTHONPATH=$(PYTHON_ROOTS) python test_macrospin.py
@@ -204,9 +206,6 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 
 ../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/xvaluesgcr.png ../examples/demag/errnorm_loglog.png ../examples/demag/linsolveparams.rst: ../examples/demag/short_nmag_comp_tests2.py
 	cd ../examples/demag/ && PYTHONPATH=$(PYTHON_ROOTS) python short_nmag_comp_tests2.py
-
-../examples/exchange_demag/timings/results.rst: ../examples/exchange_demag/timings/run_finmag.py
-	cd ../examples/exchange_demag/timings/ && PYTHONPATH=$(PYTHON_ROOTS) python run_finmag.py
 
 ../examples/demag/results_field.txt: ../examples/demag/test_field.py
 	cd ../examples/demag/ && PYTHONPATH=$(PYTHON_ROOTS) python test_field.py > results_field.txt
