--- a/doc/Makefile
+++ b/doc/Makefile
@@ -179,7 +179,8 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 	../examples/exchange_demag/exchange_demag.png ../examples/exchange_demag/exchange_energy.png \
 	../examples/exchange_demag/exchange_density.png ../examples/exchange_demag/demag_density.png \
 	../examples/exchange_demag/demag_energy.png ../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png \
-        ../examples/demag/linsolveparams.rst ../examples/demag/xvaluesgcr.png \
+        ../examples/demag/linsolveparams.rst ../examples/demag/xvaluesgcr.png ../examples/demag/bemtimings.png \
+        ../examples/demag/solvetimings.png \
 	../examples/demag/errnorm_loglog.png ../examples/demag/results_field.txt ../examples/demag/demagenergies.txt \
 	../src/finmag/tests/comparison/exchange/table.rst ../src/finmag/tests/comparison/anisotropy/table.rst \
 	../src/finmag/tests/comparison/demag/table.rst ../examples/exchange_demag/simple1D.png \
@@ -205,7 +206,7 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 ../examples/exchange_demag/exchange_demag.png ../examples/exchange_demag/exchange_energy.png ../examples/exchange_demag/demag_energy.png ../examples/exchange_demag/exchange_density.png ../examples/exchange_demag/demag_density.png: ../examples/exchange_demag/test_exchange_demag.py
 	cd ../examples/exchange_demag/ && PYTHONPATH=$(PYTHON_ROOTS) python test_exchange_demag.py
 
-../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/xvaluesgcr.png ../examples/demag/errnorm_loglog.png ../examples/demag/linsolveparams.rst ../examples/demag/krylovitr.png: ../examples/demag/short_nmag_comp_tests2.py
+../examples/demag/stddev_loglog.png ../examples/demag/xvalues.png ../examples/demag/xvaluesgcr.png ../examples/demag/errnorm_loglog.png ../examples/demag/linsolveparams.rst ../examples/demag/krylovitr.png ../examples/demag/bemtimings.png ../examples/demag/solvetimings: ../examples/demag/short_nmag_comp_tests2.py
 	cd ../examples/demag/ && PYTHONPATH=$(PYTHON_ROOTS) python short_nmag_comp_tests2.py
 
 ../examples/exchange_demag/timings/results.rst: ../examples/exchange_demag/timings/run_finmag.py
