further fine tuning

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,7 @@
+info:
+	echo "Make file to help putting a compiled version of finmag together"
+
+
 libs:
 	python setup-cython.py build_ext --inplace
 
@@ -5,3 +9,7 @@ libs:
 cp:
 	python distcp.py
 	
+
+clean:
+	find finmag -name *.so | xargs rm -f		
+	find finmag -name __pychache__ | xargs rm -fr	
