--- a/src/Makefile
+++ b/src/Makefile
@@ -9,16 +9,18 @@ libs:
 cp:
 	python distcp.py
 	cp -av finmag/tests /tmp/finmag/finmag/tests
-	cd /tmp/finmag/finmag/tests && find . -name "*.so" | xargs rm -f
-	cd /tmp/finmag/finmag/tests && find . -name "*.pyc" | xargs rm -f
-	cd /tmp/finmag/finmag/tests && find . -name __pychache__ | xargs rm -fr	
 	
 test:
 	cd /tmp/finmag/finmag/tests && PYTHONPATH=/tmp/finmag py.test -vx
 
-clean:
+cleansrc:
 	find finmag -name *.so | xargs rm -f		
 	find finmag -name __pychache__ | xargs rm -fr	
 
-removetmp:
+cleanbin:
+	cd /tmp/finmag/finmag && find . -name "*.so" | xargs rm -f
+	cd /tmp/finmag/finmag && find . -name "*.pyc" | xargs rm -f
+	cd /tmp/finmag/finmag && find . -name __pychache__ | xargs rm -fr	
+
+removebin:
 	rm -rf /tmp/finmag
