adding convenience target 'htmlraw' which does not re-run the example simulations. Useful for quick debugging of sphinx/rst issues.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -43,9 +43,10 @@ help:
 clean:
 	-rm -rf $(BUILDDIR)/* modules/*
 
-html: generate-doc
+htmlraw:
 	$(SPHINXBUILD) -W -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
-	@echo
+
+html: generate-doc htmlraw
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
 dirhtml:
