--- a/examples/std_prob_3/Makefile
+++ b/examples/std_prob_3/Makefile
@@ -1,2 +1,5 @@
 clean:
-	rm data_m.txt data_diffs.txt data_energies.txt
+	rm data_m.txt data_diffs.txt data_energies.txt doc_table.rst
+
+run:
+	python run.py
